tests/rosetta/out/Pascal/bitmap-bresenhams-line-algorithm.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/bitmap-bresenhams-line-algorithm.mochi:28:13: unexpected token "-" (expected PostfixExpr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/bitmap-bresenhams-line-algorithm.mochi:28:13

 28 |     if e2 > -dy {
    |             ^

help:
  Parse error occurred. Check syntax near this location.